# gala_docker

./: Dockerfile  README.md  docker-compose.yml
workspace/yolo_inference/: config.json  config_reader.py  yolo_inference_mil_steel.py
workspace/yolo_inference/install/: local_setup.sh  setup.sh
workspace/yolo_inference/install/custom_interfaces/share/custom_interfaces/: package.sh
workspace/yolo_inference/install/custom_interfaces/share/custom_interfaces/msg/: HookStatus.idl
workspace/yolo_inference/install/traffic_information_msgs/share/traffic_information_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/yolo_inference/install/traffic_information_msgs/share/traffic_information_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_traffic_information_msgs__rosidl_generator_cExport-noconfig.cmake  export_traffic_information_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_traffic_information_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_traffic_information_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_traffic_information_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  (+5 more)
workspace/yolo_inference/log/: latest_build
workspace/yolo_inference/src/custom_interfaces/: CMakeLists.txt
workspace/yolo_inference/src/image_acquisition/: CMakeLists.txt  package.xml
workspace/yolo_inference/src/image_acquisition/config/: parameters.yml
workspace/yolo_inference/src/image_acquisition/src/: image.cc
(+21 files in other folders)
